update home page

--- a/Action_Potentials_Website_Self/css/style.css
+++ b/Action_Potentials_Website_Self/css/style.css
@@ -8601,12 +8601,12 @@ img {
     margin-bottom: 200px;
 }
 
-.coda-kid-image .lifewire-image {
+.coda-kid-image .lifewire-image .student-led{
     margin-top: 20px;
     margin-bottom: 0px;
     padding: 0px;
 }
 
-.coda-kid .lifewire {
+.coda-kid .lifewire .student-led-{
     font-size: 0.2px;
 }
