--- a/Action_Potentials_Website_Self/css/style.css
+++ b/Action_Potentials_Website_Self/css/style.css
@@ -8638,3 +8638,12 @@ img {
 .calendar-form-submit {
     text-align: center;
 }
+
+.contact-text {
+    color:white;
+}
+
+.contact-button {
+    text-align: center;
+    color: white;
+}
